--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -29,3 +29,11 @@
 ::-webkit-scrollbar-thumb:hover {
     background-color: #bbb;
 }
+
+.el-loading-spinner {
+    margin-top: 0 !important;
+}
+
+img.lazy{
+    background: url(/images/loading.gif) no-repeat center;
+}
