前端样式修改

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8381,3 +8381,8 @@ img.lazy {
   background: url(/images/loading.gif) no-repeat center;
 }
 
+.text-ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
